--- a/index.html
+++ b/index.html
@@ -33,5 +33,32 @@
        </div>
      </div>
  </div>
+ <div class="header">
+     <div class="container">
+        <div class="header__box">
+            <ul class="header__left-list">
+                <li class="header__left-item">
+                    <p class="header__left-text">
+                        Welcome
+                    </p>
+                </li>
+                <li class="header__left-item">
+                  <h2 class="header__right-title">
+                    A Great Place to Receive Care
+                  </h2>
+                </li>
+                <li class="header__left-item">
+                    <p class="header__left-text">
+                        Get your best looking smile now!
+                    </p>
+                </li>
+                <li class="header__left-item">
+                    <a href="#" class="header__left-link">Join Us</a>
+                    <a href="#" class="header__left-link">Learn More</a>
+                </li>
+            </ul>
+        </div>
+     </div>
+ </div>
 </body>
 </html>
